# test_rep

./: docker-compose.yaml
.github/workflows/: test-runner.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: test.py
backend/src/schemas/: response.py  zalupa.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/.husky/: pre-commit
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: backend.ts
frontend/src/app/: page.tsx
frontend/src/assets/styles/: Aboba.css
frontend/src/components/: Aboba.tsx
frontend/src/features/: Aboba.tsx
frontend/src/utils/: lightenColor.ts
