[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pre-commit>=4.2.0",
    "pydantic-config>=0.3.0",
    "ruff>=0.12.4",
    "uvicorn>=0.35.0",
]

[tool.ruff]
# Ограничение длины строки
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# Явно указываем, какие правила применять
select = [
  "E",      # PEP8-ошибки
  "F",      # pyflakes
  "W",      # предупреждения PEP8
  "C90",    # классические Flake8 C-коды
  "I",      # импорт-правила (isort-подобное)
  "S",      # безопасность (bandit-подобное)
  "ANN",    # аннотации типов в функциях и методах
]

# Отключаем то, что нам не нужно или конфликтует
ignore = [
  "E203",   # пробел перед ':'
  "E501",   # длинные строки (мы обрабатываем через line-length)
  "F821",   # нераспознанные имена (иногда ложные срабатывания)
  "E722",   # bare except
]

# Какие файлы/папки не трогать
exclude = [
  ".venv/",
  "__pycache__"
]
